--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -9,6 +9,10 @@
 
 	<body>
 		<!-- Tutorial Start -->
+
+		<img src="https://assets.codepen.io/907368/radial-slider-1.jpg" />
+		<img src="https://assets.codepen.io/907368/radial-slider-2.jpg" />
+		<img src="https://assets.codepen.io/907368/radial-slider-3.jpg" />
 
 		<!-- Tutorial Ende -->
 
