--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,21 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Test A</title>
+		<title>Tutorial</title>
 	</head>
 
 	<body>
 		<!-- Tutorial Start -->
 
-		<img src="https://assets.codepen.io/907368/radial-slider-1.jpg" />
-		<img src="https://assets.codepen.io/907368/radial-slider-2.jpg" />
-		<img src="https://assets.codepen.io/907368/radial-slider-3.jpg" />
+		<img
+			fetchpriority="low"
+			src="https://assets.codepen.io/907368/radial-slider-1.jpg" />
+		<img
+			fetchpriority="low"
+			src="https://assets.codepen.io/907368/radial-slider-2.jpg" />
+		<img
+			fetchpriority="high"
+			src="https://assets.codepen.io/907368/radial-slider-3.jpg" />
 
 		<!-- Tutorial Ende -->
 
