--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,9 @@
 	<body>
 		<!-- Tutorial Start -->
 
-		<img
-			fetchpriority="low"
-			src="https://assets.codepen.io/907368/radial-slider-1.jpg" />
-		<img
-			fetchpriority="low"
-			src="https://assets.codepen.io/907368/radial-slider-2.jpg" />
-		<img
-			fetchpriority="high"
-			src="https://assets.codepen.io/907368/radial-slider-3.jpg" />
+		<img src="https://assets.codepen.io/907368/radial-slider-1.jpg" />
+		<img src="https://assets.codepen.io/907368/radial-slider-2.jpg" />
+		<img src="https://assets.codepen.io/907368/radial-slider-3.jpg" />
 
 		<!-- Tutorial Ende -->
 
