--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,13 @@
 
 	<body>
 		<!-- Tutorial Start -->
+		<!-- 
+		<link
+			rel="preload"
+			href="https://assets.codepen.io/907368/radial-slider-1.jpg?format=webp" /> -->
 
-		<img src="https://assets.codepen.io/907368/radial-slider-1.jpg" />
-		<img src="https://assets.codepen.io/907368/radial-slider-2.jpg" />
-		<img src="https://assets.codepen.io/907368/radial-slider-3.jpg" />
+		<img
+			src="https://assets.codepen.io/907368/radial-slider-1.jpg?format=webp" />
 
 		<!-- Tutorial Ende -->
 
